--- a/src/main/resources/assets/bastionhelper/lang/en_us.json
+++ b/src/main/resources/assets/bastionhelper/lang/en_us.json
@@ -1,4 +1,4 @@
 {
 	"key.category.bastionhelper": "Bastion Helper",
-	"key.bastionhelper.highlight_piglins": "Highlight Piglins"
+	"key.bastionhelper.highlight_piglins": "Toggle Piglin Highlight"
 }
