Added piglin pathfinding

--- a/src/main/resources/assets/bastionhelper/lang/en_us.json
+++ b/src/main/resources/assets/bastionhelper/lang/en_us.json
@@ -1,4 +1,5 @@
 {
 	"key.category.bastionhelper": "Bastion Helper",
-	"key.bastionhelper.highlight_piglins": "Toggle Piglin Highlight"
+	"key.bastionhelper.highlight_piglins": "Toggle Piglin Highlight",
+	"key.bastionhelper.show_piglin_paths": "Toggle Piglin Paths"
 }
