--- a/src/main/resources/assets/bastionhelper/lang/en_us.json
+++ b/src/main/resources/assets/bastionhelper/lang/en_us.json
@@ -1,5 +1,6 @@
 {
 	"key.category.bastionhelper": "Bastion Helper",
 	"key.bastionhelper.highlight_piglins": "Toggle Piglin Highlight",
-	"key.bastionhelper.show_piglin_paths": "Toggle Piglin Paths"
+	"key.bastionhelper.show_piglin_paths": "Toggle Piglin Paths",
+	"key.bastionhelper.pause_piglins": "Toggle Piglin Pause"
 }
