Added lava deadzones visualizer

--- a/src/main/resources/assets/bastionhelper/lang/en_us.json
+++ b/src/main/resources/assets/bastionhelper/lang/en_us.json
@@ -2,5 +2,6 @@
 	"key.category.bastionhelper": "Bastion Helper",
 	"key.bastionhelper.highlight_piglins": "Toggle Piglin Highlight",
 	"key.bastionhelper.show_piglin_paths": "Toggle Piglin Paths",
-	"key.bastionhelper.pause_piglins": "Toggle Piglin Pause"
+	"key.bastionhelper.pause_piglins": "Toggle Piglin Pause",
+	"key.bastionhelper.show_lava_deadzones": "Toggle Lava Deadzones"
 }
