Added creative follow feature

--- a/src/main/resources/assets/bastionhelper/lang/en_us.json
+++ b/src/main/resources/assets/bastionhelper/lang/en_us.json
@@ -3,5 +3,6 @@
 	"key.bastionhelper.highlight_piglins": "Toggle Piglin Highlight",
 	"key.bastionhelper.show_piglin_paths": "Toggle Piglin Paths",
 	"key.bastionhelper.pause_piglins": "Toggle Piglin Pause",
-	"key.bastionhelper.show_lava_deadzones": "Toggle Lava Deadzones"
+	"key.bastionhelper.show_lava_deadzones": "Toggle Lava Deadzones",
+	"key.bastionhelper.creative_follow": "Toggle Creative Follow"
 }
