Added keybind to grow up piglins

--- a/src/main/resources/assets/bastionhelper/lang/en_us.json
+++ b/src/main/resources/assets/bastionhelper/lang/en_us.json
@@ -4,5 +4,6 @@
 	"key.bastionhelper.show_piglin_paths": "Toggle Piglin Paths",
 	"key.bastionhelper.pause_piglins": "Toggle Piglin Pause",
 	"key.bastionhelper.show_lava_deadzones": "Toggle Lava Deadzones",
-	"key.bastionhelper.creative_follow": "Toggle Creative Follow"
+	"key.bastionhelper.creative_follow": "Toggle Creative Follow",
+	"key.bastionhelper.grow_up_piglins": "Age Up Baby Piglins"
 }
